# whoswho

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
scripts/: changelog-notes.ps1  release.ps1
src/: cli.rs  db.rs  errors.rs  main.rs  models.rs
src/commands/: add.rs  get.rs  list.rs  log.rs  mod.rs  note.rs  rm.rs  search.rs  set.rs
tests/: integration_tests.rs
